--- a/style.css
+++ b/style.css
@@ -53,3 +53,12 @@
   border-radius: 3px;
   margin: 20px 0;
 }
+
+.search-box .search {
+  display: flex;
+}
+
+.search-box input {
+  border-radius: 3px;
+  width: 100%;
+}
