--- a/style.css
+++ b/style.css
@@ -56,9 +56,19 @@
 
 .search-box .search {
   display: flex;
+  margin: 10px 0;
 }
 
 .search-box input {
   border-radius: 3px;
+  margin-right: 10px;
+  padding: 10px;
   width: 100%;
+}
+
+.search-box i.reset {
+  font-size: 24px;
+  height: 100%;
+  padding: 10px 0;
+  cursor: pointer;
 }
