--- a/style.css
+++ b/style.css
@@ -72,3 +72,27 @@
   padding: 10px 0;
   cursor: pointer;
 }
+
+.task-box .tasks {
+  margin: 10px 0;
+}
+
+.task-box li {
+  background-color: #f2f2f2;
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-box span {
+  padding: 10px;
+}
+
+.task-box i.delete {
+  color: #fff;
+  background-color: #d82148;
+  border-radius: o 2px 2px 0;
+  height: 100%;
+  padding: 10px;
+  cursor: pointer;
+}
