--- a/style.css
+++ b/style.css
@@ -116,3 +116,17 @@
   border-radius: 3px;
   border: 0;
 }
+
+.message-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.message-box .clear {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #65c18c;
+  border-radius: 3px;
+  border: 0;
+}
